fixed the last visible line in the information table

--- a/theme.css
+++ b/theme.css
@@ -13,6 +13,7 @@ body {
 
 h3 {
    font-family: "Trebuchet MS";
+   font-size: 1em;
 }
 
 /* Learning moment: So what I did to move my information section to the bottom right
@@ -33,11 +34,12 @@ if that's the correct thing to do.
    position: absolute;
    bottom: 0;
    right: 0;
-   height: 900px;
+   height: 900px; /* hard set the height here, might cause problems with div above in the future */
+   width: 380px; /* also hard set the width of the information section, see above for possible mistake */
 }
 
 .day_6_11 {
-   position:absolute;
+   position: absolute;
    margin-left: auto;
    margin-right: auto;
 }
@@ -53,6 +55,7 @@ if that's the correct thing to do.
    line-height: 2px;
    border-collapse: collapse;
    border-style: hidden;
+   border: 1px solid white;
 }
 
 #money td {
@@ -185,3 +188,7 @@ if that's the correct thing to do.
    font-family: "Trebuchet MS";
 }
 /* tags for div id = day_6_11 */
+
+.day_x {
+   color: blue;
+}
